5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1692_1100.log
== TEST (2019-04-30 19:44:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print(x)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:44:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print(x)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:46:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print(x)
if (x==2):
	print(tartaruga)

-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:56:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print(x)
if(x==2):
	print(Tartaruga)
elif(x==5):
	print(Garça)
elif(x==10):
	print(Arara)
elif(x==20):
	print(Mico-leao-dourado)
elif(x==50):
	print(Onça-pintada)
elif(x==100):
	print(Garoupa)
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.227237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 17, in <module>
    print(Garoupa)
NameError: name 'Garoupa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:59:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal:", Tartaruga)
elif(x==5):
	print("Animal:", Garça)
elif(x==10):
	print("Animal:", Arara)
elif(x==20):
	print("Animal:", Mico-leao-dourado)
elif(x==50):
	print("Animal:", Onça-pintada)
elif(x==100):
	print("Animal:", Garoupa)
else:
	print("animal: Invalido")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", Garoupa)
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:03:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.12284
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.177346
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.170018
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.162219
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.15765
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.352764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 15, in <module>
    print("Animal: On\xe7a-pintada")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.538301
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1692/1100/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.426638
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.371526
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.347189
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.551686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 15, in <module>
    print("Animal: On\xe7a-pintada")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.51564
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 15, in <module>
    print("Animal: On\xe7a-pintada")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.522211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 15, in <module>
    print("Animal: On\xe7a-pintada")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.51649
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 15, in <module>
    print("Animal: On\xe7a-pintada")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 10: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:03:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:03:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.109651
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:03:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garça")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onça-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 20:04:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.145775
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.193747
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 7
animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.188746
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.171004
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 100
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.112346
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:04:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("animal: Invalido")

-- EXECUTION TIME:
0.109306
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 20:05:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x=int(input("fala tu: "))
print("Entrada:", x)
if(x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")

-- EXECUTION TIME:
0.116738
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
